# libbeatnik

./: .gitmodules  .travis.yml  Beatnik.cpp  CMakeLists.txt  LICENSE  README.md  beatnik.cpp  benchmark.cpp
include/: Beatnik.cpp
include/beatnik/: Beatnik.hpp
include/beatnik/common/: Element.hpp  Index_iterator.hpp  Pair_iterator.hpp  Ring_array.hpp  math.hpp
include/beatnik/decoder/: Decoder.hpp  Transition_window.hpp  Viterbi.hpp
include/beatnik/fft/: ACF.hpp  FFT.hpp  Hann_window.hpp  Real_FFT.hpp  Rolling_FFT.hpp
include/beatnik/odf/: Balanced_ACF.hpp  Onset_detector.hpp  RCF_processor.hpp
include/beatnik/tracker/: Skewed_window.hpp  Tracker.hpp
include/re/beatnik/: beatnik.hpp
include/re/beatnik/decoder/: decoder.hpp  viterbi.hpp
include/re/beatnik/odf/: onset_detector.hpp
include/re/beatnik/tracker/: skewed_window.hpp  tracker.hpp
tests/: CMakeLists.txt  autocorrelation.cpp  benchmark.cpp  file.cpp
